--- a/templates/apps/myforms.html
+++ b/templates/apps/myforms.html
@@ -7,20 +7,19 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-6">
-            <form>
+            <form method="POST" action="{% url 'submitform' %}">
+                {% csrf_token %}
                 <div class="form-group">
                   <label for="Email">Email address</label>
-                  <input type="email" class="form-control" id="Email1" placeholder="Enter email">
+                  <input type="email" class="form-control" id="Email1" name="Email1"placeholder="Enter email">
                 </div>
                 <div class="form-group">
-                  <label for="Password">Password</label>
-                  <input type="password" class="form-control" id="Password" placeholder="Password">
+                    <label for="Textarea1">Textarea</label>
+                    <textarea class="form-control" id="Textarea1" name="Textarea1" rows="3"></textarea>
                 </div>
-                <div class="form-check">
-                  <input type="checkbox" class="form-check-input" id="Check1">
-                  <label class="form-check-label" for="Check1">Check me out</label>
+                <div class="form-group">
+                    <button type="submit" class="btn btn-primary cent">Submit</button>
                 </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
               </form>
         </div>
     </div>
